--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -107,8 +107,7 @@ vars:
   GITHUB_ORG: ProfessorManhattan
   GITHUB_USER: ProfessorManhattan
   GROUP_EXEC_ASYNC: 'false'
-  IGNORE_FOLDERS: >-
-    -path './.autodoc/*' -o -path './.cache/*' -o -path './.common*' -o -path './.config/*' -o -path './.git/*' -o
+  IGNORE_FOLDERS: -path './.autodoc/*' -o -path './.cache/*' -o -path './.common*' -o -path './.config/*' -o -path './.git/*' -o
     -path './.github/*' -o -path './.gitlab/*' -o -path './.husky/*' -o -path './.modules/*' -o -path './.npm/*' -o
     -path './.pnpm-store/*' -o -path './.shared/*' -o -path './.task/*' -o -path './.venv/*' -o -path './.vscode/*' -o
     -path './build/*' -o -path './dist/*' -o -path './node_modules/*' -o -path './roles/*' -o -name pnpm-lock.yaml -o
@@ -143,19 +142,21 @@ vars:
   PYTHON_VIRTUALENV: true
   REPOSITORY_SUBTYPE:
     sh: |
+      if [ -n "$REPOSITORY_TYPE" ]; then REPO_SUBTYPE="$REPOSITORY_TYPE"; fi
       if type jq &> /dev/null && [ -f package.json ]; then
         VER="$(jq -r '.blueprint.subgroup' package.json)"
-        if [ "$VER" == 'null' ]; then echo "shared"; else echo "$VER"; fi
+        if [ "$VER" == 'null' ]; then echo "$REPO_SUBTYPE"; else echo "$VER"; fi
       else
-        echo "shared"
+        echo "$REPO_SUBTYPE"
       fi
   REPOSITORY_TYPE:
     sh: |
+      if [ -n "$GROUP_TYPE" ]; then REPO_TYPE="$GROUP_TYPE"; fi
       if type jq &> /dev/null && [ -f package.json ]; then
         VER="$(jq -r '.blueprint.group' package.json)"
-        if [ "$VER" == 'null' ]; then echo "common"; else echo "$VER"; fi
+        if [ "$VER" == 'null' ]; then echo "$REPO_TYPE"; else echo "$VER"; fi
       else
-        echo "common"
+        echo "$REPO_TYPE"
       fi
   SEMANTIC_CONFIG: semantic-release-config
   TIMEZONE: America/New_York
@@ -282,16 +283,22 @@ tasks:
     cmds:
       - |
         {{if .CLI_ARGS}}
+        task --list > /dev/null || (echo "ERROR: Invalid Taskfiles!" && exit 1)
         git add --all
         HUSKY=0 git commit -m "{{.CLI_ARGS}}" --no-verify
         {{else}}
+        task --list > /dev/null || (echo "ERROR: Invalid Taskfiles!" && exit 1)
         git add --all
         git commit
         {{end}}
 
   commit:quick:
+    deps:
+      - ci:commit:config
     cmds:
-      - git add --all
+      - |
+        task --list > /dev/null || (echo "ERROR: Invalid Taskfiles!" && exit 1)
+        git add --all
       - HUSKY=0 git commit -m '🔧 chore(tweak): quick minor update' --no-verify
       - git push origin master
 
@@ -378,8 +385,7 @@ tasks:
     cmds:
       - git init
       - task: repair
-      - task: ci:commit
-      - task: ci:synchronize
+      - task: prepare
 
   lint:
     desc: Lints the project using all linters
@@ -704,25 +710,28 @@ tasks:
       - task: common:shell
 
   start:
-    desc: Set up the project and refresh it with the latest changes
+    desc: Start the project by installing / updating dependencies, repairing issues, and opening a tutorial
     summary: |
       # Start the Project
 
-      This task will scaffold the project with the latest upstream changes
-      and ensure your development environment has all the dependencies installed.
+      This task does everything that running `bash start.sh` does plus a little bit more:
 
-      This command should be used whenever the files that are automatically generated
-      need to be updated. It also serves as an entry point for new developers who
-      are getting started with the project.
+      1. Installs Homebrew if it is not already installed
+      2. Ensures Bodega is installed and up-to-date
+      3. Ensures common system dependencies and runtimes
+      4. Installs commonly used CLI tools
+      5. Ensures local dependencies such as `node_modules` are installed
+      6. Attempts to repair the project if it detects any issues
 
-      **Example usage:**
-      `task start`
+      It basically sets up all the tools you need, in advance so that problems can be detected as early
+      as possible. In some cases, this command will open documentation or a tutorial to read while dependencies are being
+      installed.
     log:
-      error: Error encountered while starting up the project
-      start: Synchronizing project with upstream file changes and bootstrapping
-      success: Successfully synchronized the project with upstream file changes and also bootstrapped the project
+      error: Yikes! Error starting the project!
+      start: Starting the project..
+      success: Project started!
     cmds:
-      - task: upstream:{{.PROJECT_TYPE}}
+      - task: common:start
 
   synchronize:
     desc: Set up the project and refresh it with the latest changes
