--- a/.config/taskfiles/git/Taskfile-gitlab.yml
+++ b/.config/taskfiles/git/Taskfile-gitlab.yml
@@ -113,9 +113,10 @@ tasks:
           NO_PROMPT=1 glab repo create '{{.GITLAB_PATH}}' --group '{{.GITLAB_GROUP}}' \
           --description '{{.EMOJI_START}}{{.DESCRIPTION}}{{.EMOJI_END}}' --name '{{.NAME}}' \
           {{.PROJECT_TYPE}} --tag "$(jq -r '.keywords | tostring' package.json | sed 's/\[//' | sed 's/\]//')"
+          task --list > /dev/null || (echo "ERROR: Invalid Taskfiles!" && exit 1)
           git add --all
           HUSKY=0 git commit --quiet -m "🎂 Birth" -n || true
-          git push --quiet -u --no-progress gitlab master
+          git push gitlab master
         ignore_error: true
     status:
       - '[ -z "$GITLAB_TOKEN" ] || (test -d .git && glab repo view "{{.GITLAB_PATH}}" > /dev/null)'
