--- a/.config/taskfiles/git/Taskfile.yml
+++ b/.config/taskfiles/git/Taskfile.yml
@@ -45,13 +45,13 @@ tasks:
     log:
       start: Running automated commit
     cmds:
-      - cmd: |
-          if [[ "$FULLY_AUTOMATED_TASKS" == 'true' ]]; then
-            task --list > /dev/null || (echo "ERROR: Invalid Taskfiles!" && exit 1)
-            git add --all
-            HUSKY=0 git commit -m "☁️ Automation" -n
-          fi
+      - task --list > /dev/null || (echo "ERROR > Invalid Taskfile(s)!" && exit 1)
+      - git add --all
+      - cmd: >
+          HUSKY=0 git commit -m "☁️ chore(automation): Automated update" -n
         ignore_error: true
+    status:
+      - '[ "$FULLY_AUTOMATED_TASKS" != "true" ] || [ "$SEMANTIC_RELEASE" == "true" ]'
 
   convert:folder:submodule:
     deps:
@@ -70,18 +70,15 @@ tasks:
       - git init
       - git remote add origin "{{.GITLAB_REPO}}"
       - git add --all
-      - git commit --quiet -m "refactor(convert-dir-to-submodule) Adding folder/project to its own git repository."
+      - git commit --quiet -m "🧐 refactor(submodule): Adding folder/project to its own git repository."
       - git push --quiet -u --no-progress origin master
-      - |
-        cd ..
-        rm -rf {{.BASENAME}}
-        git add {{.BASENAME}}
-        git commit --quiet -m "refactor(convert-dir-to-submodule) Removing folder which will now be a submodule."
-        git submodule add -b master "{{.GITLAB_REPO}}" {{.BASENAME}}
-        git add {{.BASENAME}}
-        git commit --quiet -m "refactor(convert-dir-to-submodule) Adding new submodule which was previously a directory."
-        git push --quiet -u --no-progress origin HEAD
-      - .config/log success ''
+      - cd .. && rm -rf {{.BASENAME}}
+      - cd .. && git add {{.BASENAME}}
+      - cd .. && git commit --quiet -m "🧐 refactor(submodule): Removing folder which will now be a submodule."
+      - cd .. && git submodule add -b master "{{.GITLAB_REPO}}" {{.BASENAME}}
+      - cd .. && git add {{.BASENAME}}
+      - cd .. && git commit --quiet -m "🧐 refactor(submodule): Adding new submodule which was previously a directory."
+      - cd .. && git push --quiet -u --no-progress origin HEAD
     preconditions:
       - sh: '[[ ! $(git rev-parse --git-dir) =~ ".git/modules" ]]'
         msg: Cannot convert the directory to a submodule - the directory already appears to be a submodule.
@@ -124,11 +121,18 @@ tasks:
       success: Successfully ran `git push all master --force || git push origin master`
     cmds:
       - |
-        if [[ "$FULLY_AUTOMATED_TASKS" == 'true' ]]; then
-          git push all master --force || git push origin master
+        if ! git push all master --force; then
+          git pull -X theirs origin master
+          git add --all
+          HUSKY=0 git commit -m "☁️ chore(automation): Automated update to all remotes" -n
+          if ! git push all master --force; then
+            task git:gitlab:protected:off -- "master"
+            git push all master --force
+            task git:gitlab:protected:on -- "master"
+          fi
         fi
     status:
-      - '[ -n "$CI" ]'
+      - '[ -n "$CI" ] || [ "$SEMANTIC_RELEASE" == "true" ] || [ "$FULLY_AUTOMATED_TASKS" != "true" ]'
 
   remotes:
     deps:
