--- a/.config/taskfiles/common/Taskfile-update.yml
+++ b/.config/taskfiles/common/Taskfile-update.yml
@@ -100,6 +100,12 @@ tasks:
       - task: :common:{{if eq .CONTAINER "docker"}}husky:ci{{else}}husky{{end}}
       - task: :{{if eq .REPOSITORY_SUBTYPE "role"}}ansible:keywords:sync{{else}}donothing{{end}}
 
+  finish:
+    cmds:
+      - cmd: git push
+        ignore_error: true
+      - task: :ci:synchronize
+
   init:
     log:
       error: Encountered error while initializing project
@@ -284,6 +290,8 @@ tasks:
             .config/log warn '`blueprint.upstreamRemotes` objects should have the `remote`, `url`, and `branch` keys'
           fi
         done
+    status:
+      - '[ "$(jq -r ".blueprint.upstreamRemotes | length" package.json)" == "0" ]'
 
   upstream:remotes:pull:
     deps:
@@ -321,3 +329,5 @@ tasks:
       - task: ':{{if eq .REPOSITORY_TYPE "go"}}{{if eq .REPOSITORY_SUBTYPE "cli"}}go:help{{else}}donothing{{end}}{{else}}donothing{{end}}'
       - task: ':{{if eq .REPOSITORY_TYPE "packer"}}packer:update:variables{{else}}donothing{{end}}'
       - task: ':{{if eq .REPOSITORY_TYPE "ansible"}}ansible:update:variables{{if eq .REPOSITORY_SUBTYPE "playbook"}}:playbook{{end}}{{else}}donothing{{end}}'
+      - task: ':{{if eq .REPOSITORY_SUBTYPE "tap"}}install:tap:scan{{else}}donothing{{end}}'
+      - task: ':{{if eq .REPOSITORY_SUBTYPE "scoop"}}install:scoop:scan{{else}}donothing{{end}}'
