--- a/.config/taskfiles/npm/Taskfile.yml
+++ b/.config/taskfiles/npm/Taskfile.yml
@@ -215,6 +215,16 @@ tasks:
         done
         wait
 
+  config:
+    deps:
+      - :install:software:jq
+      - :install:software:node
+    vars:
+      REGISTRY_ADDRESS:
+        sh: jq -r '.publishConfig["@gitlab:registry"]' package.json | sed 's/^https://'
+    cmds:
+      - npm config set -- '//registry.npmjs.org/:_authToken' '${NPM_TOKEN}' '{{.REGISTRY_ADDRESS}}:_authToken' '${GITLAB_TOKEN}'
+
   depcheck:dependencies:
     deps:
       - :install:npm:depcheck
@@ -271,7 +281,29 @@ tasks:
     cmds:
       - node-prune
 
-  publish: 'true'
+  publish:gitlab:
+    deps:
+      - :install:software:jq
+      - :install:software:node
+      - :npm:config
+    vars:
+      PKG_NAME:
+        sh: jq -r '.name' package.json
+      REGISTRY_ADDRESS:
+        sh: jq -r '.publishConfig["@gitlab:registry"]' package.json
+      VERSION:
+        sh: jq -r '.version' package.json
+    env:
+      BACKUP_PKG:
+        sh: mktemp
+    cmds:
+      - cp package.json "$BACKUP_PKG"
+      - TMP="$(mktemp)" && jq '.name = "@gitlab/{{.PKG_NAME}}" | .publishConfig.access = "restricted"' package.json > "$TMP" && mv "$TMP" package.json
+      - npm publish
+      - npm dist-tag --registry={{.REGISTRY_ADDRESS}} add {{.PKG_NAME}}@{{.VERSION}} latest
+      - mv "$BACKUP_PKG" package.json
+    status:
+      - '[ "$(jq -r ".publishConfig[\"@gitlab:registry\"] | type" package.json)" != "string" ] || [ -z "$NPM_PUBLISH_GITLAB" ]'
 
   start:
     deps:
